php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36382 getColumnMeta() crashes
Submitted: 2006-02-13 16:50 UTC Modified: 2006-02-13 16:55 UTC
From: derick@php.net Assigned:
Status: Closed Package: PDO related
PHP Version: 5.1.2 OS: linux
Private report: No CVE-ID: None
 [2006-02-13 16:50 UTC] derick@php.net
Description:
------------
PDO/PGSql segfaults with "getColumnMeta".

Reproduce code:
---------------
script:
<?php
$db = new pdo( 'pgsql:dbname=ezc' );
$stmt = $db->query( 'SELECT id AS other FROM query_test' );
$stmt->getColumnMeta( 0 );
?>

data (database name is "ezc") is here:
http://files.derickrethans.nl/ezc.dump.txt




Actual result:
--------------
Segfault, backtrace is @ http://files.derickrethans.nl/ezc.valgrind.txt

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-02-13 16:55 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 18 04:00:02 2026 UTC