- Fixed bug #36382 (PDO/PgSQL's getColumnMeta() crashes).